--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ kotlin.code.style=official
 kotlin_version=1.3.70
 spring_boot_version=2.3.0.RELEASE
 grpc_version=1.29.0
+test_containers_version=1.14.3
