--- a/kubernates/mongo.yaml
+++ b/kubernates/mongo.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   ports:
     - port: 27017
+      targetPort: 27017
       name: mongo
   clusterIP: None
   selector:
@@ -20,7 +21,7 @@ spec:
   selector:
     matchLabels:
       app: mongo # has to match .spec.template.metadata.labels
-  serviceName: "nginx"
+  serviceName: "mongo"
   replicas: 3 # by default is 1
   template:
     metadata:
@@ -34,16 +35,5 @@ spec:
           ports:
             - containerPort: 27017
               name: mongo
-          volumeMounts:
-            - name: mongo
-              mountPath: /data/db
-  volumeClaimTemplates:
-    - metadata:
-        name: mongo
-      spec:
-        accessModes:
-          - ReadWriteOnce
-        storageClassName: local-storage
-        resources:
-          requests:
-            storage: 100Mi
+          command: ["mongod"]
+          args: ["--replSet", "rs0", "--bind_ip_all"]
