--- a/kubernates/mongo.yaml
+++ b/kubernates/mongo.yaml
@@ -31,9 +31,7 @@ spec:
       terminationGracePeriodSeconds: 10
       containers:
         - name: mongo
-          image: mongo:latest
+          image: mongo-replica-set:4.4
           ports:
             - containerPort: 27017
               name: mongo
-          command: ["mongod"]
-          args: ["--replSet", "rs0", "--bind_ip_all"]
