--- a/kubernates/player.yaml
+++ b/kubernates/player.yaml
@@ -17,3 +17,6 @@ spec:
           image: ludd.player:0.1
           ports:
             - containerPort: 9001
+          env:
+            - name: mongodb.url
+              value: "mongodb://mongo-0.mongo,mongo-1.mongo,mongo-2.mongo/?replicaSet=rs0"
