--- a/kubernates/player.yaml
+++ b/kubernates/player.yaml
@@ -19,4 +19,4 @@ spec:
             - containerPort: 9001
           env:
             - name: mongodb.url
-              value: "mongodb://mongo-0.mongo,mongo-1.mongo,mongo-2.mongo/?replicaSet=rs0"
+              value: "mongodb://mongo-0.mongo.default.svc.cluster.local,mongo-1.mongo.default.svc.cluster.local,mongo-2.mongo.default.svc.cluster.local/?replicaSet=rs0"
