session context authentication deserialization is fixed PlayerIntegrationTest.kt is working finally

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 gateway.tcp_server.port = 9000
 gateway.service_provider = proxy
 gateway_server.autostart = true
+# suppress inspection "UnusedProperty"
+logging.level.com.ludd= DEBUG
