gateway proto extracted to separate module gateway_rpc full integration test for set player name

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -3,3 +3,4 @@ gateway.service_provider = proxy
 gateway_server.autostart = true
 # suppress inspection "UnusedProperty"
 logging.level.com.ludd= DEBUG
+gateway.auth=enabled
