--- a/kubernates/fail.yaml
+++ b/kubernates/fail.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: fail
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: fail
@@ -17,3 +18,13 @@ spec:
           image: ludd.fail:0.1
           ports:
             - containerPort: 9001
+          readinessProbe:
+            tcpSocket:
+              port: 9001
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          livenessProbe:
+            tcpSocket:
+              port: 9001
+            initialDelaySeconds: 15
+            periodSeconds: 60
